[gd_scene load_steps=9 format=3 uid="uid://ccxbpogh4na0x"]

[ext_resource type="PackedScene" uid="uid://bjdch1vt0u3qe" path="res://scene_builder/ui/TileSelector.tscn" id="1_p3h20"]
[ext_resource type="Script" uid="uid://33h7ke18pfkj" path="res://scene_builder/ui/PlannerUI.gd" id="1_wubfe"]
[ext_resource type="Theme" uid="uid://b0urpy7o51mus" path="res://scene_builder/ui/MenuBar.tres" id="2_ock22"]
[ext_resource type="PackedScene" uid="uid://cvkc0yd6fdkx1" path="res://scene_builder/ui/SetSelector.tscn" id="3_51qet"]
[ext_resource type="Script" uid="uid://bg6kv52sn6wvy" path="res://scene_builder/ui/FileButton.gd" id="3_cr31u"]
[ext_resource type="PackedScene" uid="uid://cwjg548hsv7kc" path="res://scene_builder/ui/SaveAsDialog.tscn" id="4_v7e5h"]
[ext_resource type="PackedScene" uid="uid://diejbhniso38j" path="res://scene_builder/ui/tile_info.tscn" id="7_47kwl"]
[ext_resource type="Script" uid="uid://dt0lyamdfpa3t" path="res://scene_builder/ui/UnsavedChangesDialog.gd" id="7_fqoex"]

[node name="PlannerUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wubfe")

[node name="Controls" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 35

[node name="Label" type="Label" parent="Controls" groups=["add_tile", "select_tile"]]
layout_mode = 2
size_flags_vertical = 0
text = "Controls:
Q/E: rotate tile
Right mouse: Pan camera
Middle mouse: Rotate camera"

[node name="StaticUI" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Top" type="MarginContainer" parent="StaticUI"]
layout_mode = 2
size_flags_vertical = 0

[node name="Panel" type="Panel" parent="StaticUI/Top"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="StaticUI/Top"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_ock22")

[node name="FileButton" type="MenuButton" parent="StaticUI/Top/MenuBar"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 100.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 20
text = "File"
text_overrun_behavior = 3
script = ExtResource("3_cr31u")

[node name="SaveAsDialogControl" parent="StaticUI/Top/MenuBar/FileButton" instance=ExtResource("4_v7e5h")]
unique_name_in_owner = true
visible = false

[node name="Left" type="MarginContainer" parent="StaticUI"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Background" type="Panel" parent="StaticUI/Left"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StaticUI/Left"]
layout_mode = 2

[node name="ToolSelector" type="HBoxContainer" parent="StaticUI/Left/VBoxContainer"]
layout_mode = 2

[node name="AddTile" type="Button" parent="StaticUI/Left/VBoxContainer/ToolSelector"]
layout_mode = 2
text = "Add"

[node name="SelectTile" type="Button" parent="StaticUI/Left/VBoxContainer/ToolSelector"]
layout_mode = 2
text = "Select"

[node name="DeleteTile" type="Button" parent="StaticUI/Left/VBoxContainer/ToolSelector"]
layout_mode = 2
text = "Delete"

[node name="ToolInfo" type="HBoxContainer" parent="StaticUI/Left/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="SetSelectorControl" parent="StaticUI/Left/VBoxContainer/ToolInfo" groups=["add_tile"] instance=ExtResource("3_51qet")]
unique_name_in_owner = true
layout_mode = 2

[node name="TileSelectorControl" parent="StaticUI/Left/VBoxContainer/ToolInfo" groups=["add_tile"] instance=ExtResource("1_p3h20")]
unique_name_in_owner = true
layout_mode = 2

[node name="TileInfo" parent="StaticUI/Left/VBoxContainer/ToolInfo" instance=ExtResource("7_47kwl")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Dialogs" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="UnsavedChangesDialog" type="AcceptDialog" parent="Dialogs"]
unique_name_in_owner = true
title = "Unsaved changes"
initial_position = 1
size = Vector2i(200, 132)
exclusive = false
ok_button_text = "Save"
dialog_text = "The current scene has unsaved changes, would you like to save?"
dialog_hide_on_ok = false
dialog_close_on_escape = false
dialog_autowrap = true
script = ExtResource("7_fqoex")

[node name="UnsavedChangesSaveAsDialog" parent="Dialogs" instance=ExtResource("4_v7e5h")]
unique_name_in_owner = true
initial_position = 1
visible = false

[connection signal="pressed" from="StaticUI/Left/VBoxContainer/ToolSelector/AddTile" to="." method="on_select_add_tool"]
[connection signal="pressed" from="StaticUI/Left/VBoxContainer/ToolSelector/SelectTile" to="." method="on_select_select_tool"]
[connection signal="pressed" from="StaticUI/Left/VBoxContainer/ToolSelector/DeleteTile" to="." method="on_select_remove_tool"]
[connection signal="copy_tile" from="StaticUI/Left/VBoxContainer/ToolInfo/TileInfo" to="." method="set_selected_tile_from_copy"]
[connection signal="confirmed" from="Dialogs/UnsavedChangesDialog" to="." method="unsaved_changes_save"]
[connection signal="custom_action" from="Dialogs/UnsavedChangesDialog" to="." method="unsaved_changes_custom"]
[connection signal="saved_with_name" from="Dialogs/UnsavedChangesSaveAsDialog" to="." method="on_unsaved_changes_save_as_dialog_saved"]
